# dict2dc

./: LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: checks.yaml  publish.yaml
src/dict2dc/: dc2json.py  dc2query.py  dict2dc.py
src/dict2dc/models/: base.py  parsing.py  requests.py
src/dict2dc/utils/: types.py
tests/: conftest.py  smoketest.py  test_dc2json.py  test_dc2query.py  test_dict2dc.py
tests/models/: test_base.py
tests/utils/: test_types.py
